@@ -25,7 +25,6 @@ import com.telenav.cactus.maven.log.BuildLog;
 import com.telenav.cactus.maven.mojobase.BaseMojo;
 import com.telenav.cactus.scope.ProjectFamily;
 import com.telenav.cactus.maven.tree.ProjectTree;
-import com.telenav.cactus.maven.trigger.RunPolicies;
 import org.apache.maven.plugin.MojoFailureException;
 import org.apache.maven.plugins.annotations.LifecyclePhase;
 import org.apache.maven.plugins.annotations.Parameter;
@@ -265,7 +264,7 @@ public class LexakaiMojo extends BaseMojo
 
     public LexakaiMojo()
     {
-        super(RunPolicies.POM_PROJECT_ONLY.and(RunPolicies.LAST));
+        super(new FamilyRootRunPolicy());
     }
 
     @Override
@@ -496,7 +495,8 @@ public class LexakaiMojo extends BaseMojo
 
     private void minimizeSVG(Path folderOrFile) throws IOException
     {
-        if (noMinimize) {
+        if (noMinimize)
+        {
             return;
         }
         if (Files.isDirectory(folderOrFile))
@@ -509,12 +509,13 @@ public class LexakaiMojo extends BaseMojo
             }
         }
         else
-        {
-            String text = Files.readString(folderOrFile);
-            String revised = XML_COMMENT.matcher(text).replaceAll("") + '\n';
-            Files.write(folderOrFile, revised.getBytes(UTF_8), WRITE,
-                    TRUNCATE_EXISTING);
-        }
+            if (Files.exists(folderOrFile))
+            {
+                String text = Files.readString(folderOrFile);
+                String revised = XML_COMMENT.matcher(text).replaceAll("") + '\n';
+                Files.write(folderOrFile, revised.getBytes(UTF_8), WRITE,
+                        TRUNCATE_EXISTING);
+            }
     }
 
     private void runLexakai(List<String> args, MavenProject project,
